[build-system]

requires = ["setuptools",
            "setuptools_scm",
            "wheel"]

build-backend = 'setuptools.build_meta'

[project]
name = "pydrad"
dynamic = ["version"]
description = "A Python interface to the HYDRAD radiative hydrodynamics code"
readme = {file="README.md", content-type = "text/markdown"}
license = {file="LICENSE.rst"}
authors = [
  {name="Will Barnes", email="will.t.barnes@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = [
  "heliophysics",
  "solar physics",
  "astrophysics",
  "plasma physics",
  "science",
]
requires-python = ">=3.10"
dependencies = [
  "astropy",
  "h5py",
  "numpy",
]

[project.urls]
Homepage = "https://pydrad.readthedocs.io"
Documentation = "https://pydrad.readthedocs.io"
Repository = "https://github.com/rice-solar-physics/pydrad/"
Issues = "https://github.com/rice-solar-physics/pydrad/issues/"


[project.optional-dependencies]
all = ["pydrad"]

docs =[
  "pydrad[all]",
  "sphinx-automodapi",
  "sphinx-design",
  "sphinx-gallery",
  "sphinx",
  "sphinxcontrib-bibtex",
]
